会员订购页面调整

--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -19,7 +19,7 @@
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<div class="personInfo-container">
-					<p class="display-inlineBlock"><img class="head-portrait display-inlineBlock" src="../../image/utils/default_personalimage.png" />冰糖馨儿</p>
+					<p class="person-name display-inlineBlock"><img class="head-portrait display-inlineBlock" src="../../image/utils/default_personalimage.png" />冰糖馨儿</p>
 				</div>
 				<div id="slider" class="mui-slider deal-choose-container">
 					<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control normal-super">
@@ -76,7 +76,7 @@
 					</li>
 					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
 					    <a href="#">
-					        <span class="mui-icon mui-icon-email display-inlineBlock"><span class="mui-badge mui-badge-red">5</span></span>
+					        <span class="mui-icon mui-icon-email display-inlineBlock"></span>
 					        <p class="display-inlineBlock">群人数增加至500人</p>
 					    </a>
 					</li>
