--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -17,7 +17,9 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<button id="loading" type="button" data-loading-text=" " class="mui-btn mui-pull-right" style="background: transparent;border: none;">&nbsp;</button>
+			<a id="spinner" class="mui-pull-right" style="padding-top: 10px;">
+				<span class="mui-spinner"></span>
+			</a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
@@ -25,7 +27,6 @@
 			mui.init();
 			mui.plusReady(function() {
 				events.blurBack();
-				mui("#loading").button('loading'); //切换为loading状态
 
 				//---获取数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
@@ -34,7 +35,7 @@
 
 				var sub = events.createSubAppendMain(main, data.turl, {}, function() {
 					console.log('sub loaded');
-					mui("#loading").button('reset'); //切换为reset状态
+					document.getElementById("spinner").style.display = 'none';
 				});
 
 				sub.addEventListener("loading", function() { //Webview窗口页面开始加载事件
@@ -43,7 +44,7 @@
 
 				sub.addEventListener("error", function() { //Webview窗口错误事件
 					console.log('sub error');
-					mui("#loading").button('reset'); //切换为reset状态
+					document.getElementById("spinner").style.display = 'none';
 					mui.toast('加载失败');
 				});
 
