支付会员界面

--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -35,17 +35,17 @@
 					<div class="mui-slider-group">
 						<div id="normal-deal" class="mui-slider-item mui-control-content mui-active">
 							<div class="deal-container">
-								<div class="duration-price"><p class="duration-info display-inlineBlock">3个月</p><p class="price-info display-inlineBlock">24元</p></div>
+								<div class="duration-price"><p class="duration-info display-inlineBlock">3个月</p><p class="price-info display-inlineBlock">￥12</p></div>
 								<div class="vertical-line"></div>
 								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
 							</div>
 							<div class="deal-container">
-								<div class="duration-price"><p class="duration-info display-inlineBlock">3个月</p><p class="price-info display-inlineBlock">24元</p></div>
+								<div class="duration-price"><p class="duration-info display-inlineBlock">6个月</p><p class="price-info display-inlineBlock">￥24</p></div>
 								<div class="vertical-line"></div>
 								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
 							</div>
 							<div class="deal-container">
-								<div class="duration-price"><p class="duration-info display-inlineBlock">3个月</p><p class="price-info display-inlineBlock">24元</p></div>
+								<div class="duration-price"><p class="duration-info display-inlineBlock">12个月</p><p class="price-info display-inlineBlock">￥48</p></div>
 								<div class="vertical-line"></div>
 								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
 							</div>
@@ -132,6 +132,7 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<!--订购会员-->
 		<script src="../../js/cloud/order-member.js"></script>
 	</body>
