--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -73,9 +73,9 @@
 			//存储个人信息
 			var tempInfo;
 
-			//			var wxChannel = null; // 微信支付
-			//			var aliChannel = null; // 支付宝支付
-			//			var channel = null;
+						var wxChannel = null; // 微信支付
+						var aliChannel = null; // 支付宝支付
+						var channel = null;
 
 			mui.plusReady(function() {
 				tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
