--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -225,7 +225,7 @@
 
 		});
 		var addListener = function() {
-			
+
 			window.addEventListener('hidePreImage', function(data) {
 				mui.getPreviewImage().close();
 			})
@@ -234,7 +234,6 @@
 				console.log(JSON.stringify(tempData));
 				var index = 'line' + tempIndex;
 				console.log(index)
-
 				if(tempData.flag == '评论') {
 					document.getElementById(index).className = 'mui-media-body dynamic-line';
 					var div = document.createElement("div");
@@ -247,32 +246,44 @@
 					commentList.appendChild(div);
 					zonepArray[tempIndex].Comments.push(tempData.Comment)
 				} else if(tempData.flag == '评论回复') {
-					var indexArr = tempIndex.split('-');
-					var id = indexArr[0];
-					var commentId = indexArr[1];
-					var replyId = indexArr[2];
-
-					var tempModel = zonepArray[id].Comments[commentId];
-					var replyUserId;
-					var ReplyIdName;
-					if(replyId == '评论') {
-						replyUserId = tempModel.UserId
-						ReplyIdName = tempModel.UserIdName
-					} else {
-						replyUserId = tempModel.Replys[replyId].UserId;
-						ReplyIdName = tempModel.Replys[replyId].UserIdName;
+					var id;
+					var commentId;
+					var replyId;
+					if(tempIndex.indexOf('-') >= 0) {
+						var indexArr = tempIndex.split('-');
+						id = indexArr[0];
+						commentId = indexArr[1];
+						replyId = indexArr[2];
+						} else {
+						var indexArr = tempIndex.split('-');
+						id = indexArr[0];
+						indexArr = tempData.tempIndex.split('-');
+						commentId = indexArr[1];
+						replyId = indexArr[2];
 					}
-					var commentList = document.getElementById("commentList" + id);
-					var div = document.createElement("div");
-					div.id = 'replyComment' + id + '-' + commentId + '-' + replyId;
-					div.className = 'mui-media-body replyComment';
-					div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name">' + personalunick + '</font>' +
-						'<font class="common-font-family-Regular" style = "font-size:14px">回复</font>' +
-						'<font class="common-font-family-Regular dynamic-comment-name">' + ReplyIdName + '</font>' +
-						'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font></div>'
-					var tempDiv = document.getElementById('replyComment' + id + '-' + commentId + '-' + '评论')
-					tempDiv.appendChild(div)
-					zonepArray[id].Comments[commentId].Replys.push(tempData.Reply);
+
+						var tempModel = zonepArray[id].Comments[commentId];
+						var replyUserId;
+						var ReplyIdName;
+						if(replyId == '评论') {
+							replyUserId = tempModel.UserId
+							ReplyIdName = tempModel.UserIdName
+						} else {
+							replyUserId = tempModel.Replys[replyId].UserId;
+							ReplyIdName = tempModel.Replys[replyId].UserIdName;
+						}
+						var commentList = document.getElementById("commentList" + id);
+						var div = document.createElement("div");
+						div.id = 'replyComment' + id + '-' + commentId + '-' + replyId;
+						div.className = 'mui-media-body replyComment';
+						div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name">' + personalunick + '</font>' +
+							'<font class="common-font-family-Regular" style = "font-size:14px">回复</font>' +
+							'<font class="common-font-family-Regular dynamic-comment-name">' + ReplyIdName + '</font>' +
+							'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font></div>'
+						var tempDiv = document.getElementById('replyComment' + id + '-' + commentId + '-' + '评论')
+						tempDiv.appendChild(div)
+						zonepArray[id].Comments[commentId].Replys.push(tempData.Reply);
+					
 
 				} else {
 					flag = 2; //下拉刷新
@@ -370,7 +381,7 @@
 			//			setTimeout(function() {
 			flag = 1; //上拉加载更多
 			if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
-//				mui.toast('没有更多了...');
+				//				mui.toast('没有更多了...');
 				mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
 			} else {
 				tempPage++;
