申请入群 弹出框样式

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -630,6 +630,9 @@
 									},
 									className: datasource[index].gname
 								},
+								waiting:{
+									title:"加载中..."
+								}
 							});
 						} else {
 							console.log('家校圈');
