--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -45,10 +45,9 @@
 		<div id="chose-roles" class="mui-popover center-popover">
 			<div class="pop-title">
 				<div class="title-left"></div>
-				<div class="title-middle">验证信息</div>
+				<div class="title-middle">请选择身份</div>
 				<span id="btn-cancle" class="title-right iconfont icon-guanbi1"></span>
 			</div>
-			<p class="pop-hint">请选择身份</p>
 			<form class="mui-input-group chose-container">
 				<div class="mui-input-row mui-radio mui-left display-inlineBlock">
 					<label class="parents-label mui-ellipsis">家长</label>
@@ -63,7 +62,7 @@
 					<input id="check-stu" name="radio1" type="radio" value="3">
 				</div>
 			</form>
-			<textarea id="extra-input" class="extra-input" placeholder="请输入备注信息，最多20字"></textarea>
+			<textarea id="extra-input" class="extra-input" rows="2" placeholder="请输入备注信息，最多20字"></textarea>
 			<div class="buttons">
 				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
 				<!--<button  type="button" class="mui-btn mui-btn-green btn-cancel">取消</button>-->
