0005594: 班级空间的班级成员界面，每次打开都是先图1界面，然后弹出班级成员，建议一起显示不要显示一部分在弹出成员0429

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -30,7 +30,7 @@
 				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9" style="background-color: white;">
 
 				</ul>
-				<div id="show-all" class="more-container display-none" style="background-color: white;">
+				<div id="show-all" class="more-container display-none" style="background-color: white; display: none;">
 					<p class="show-all-words">查看全部群成员<span class="mui-icon mui-icon-arrowright more-arrow"></span></p>
 				</div>
 				<div style="width: 100%;background-color: #E4E4E4;height: 1px;margin-top: -10px;"></div>
