--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -28,7 +28,6 @@
 				background: white;
 				position: absolute;
 				width: 96%;
-				/*height: 40px;*/
 				border-radius: 5px;
 				left: 2%;
 			}
@@ -128,6 +127,35 @@
 			.notes-none img {
 				width: 50%;
 			}
+			/*.record-video {*/
+			/*视频区域*/
+			/*height: 149px;*/
+			/*}*/
+
+			.video-thumb {
+				/*视频缩略图*/
+				width: 50%;
+				visibility: hidden;
+			}
+
+			.video-play {
+				/*播放按钮*/
+				position: absolute;
+				visibility: hidden;
+			}
+
+			.mui-popover {
+				width: 100%;
+				height: 0px;
+				border-radius: initial;
+				background-color: transparent;
+				border: none;
+				box-shadow: none;
+			}
+
+			.mui-backdrop {
+				background-color: black;
+			}
 		</style>
 	</head>
 
@@ -136,7 +164,6 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">我的云盘—笔记</h1>
 		</header>
-
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="z-index: 1;">
 			<div class="mui-scroll">
 				<!--数据列表-->
@@ -156,6 +183,11 @@
 				</div>
 			</div>
 		</div>
+		<div id="videoPopover" class="mui-popover">
+			<video id="video" style="position: absolute;z-index: 999;">
+				您的浏览器不支持 video 标签。
+			</video>
+		</div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script type="text/javascript" src="../../js/publicProtocol.js"></script>
@@ -164,6 +196,7 @@
 	<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
 	<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
 	<script type="text/javascript" src="../../js/mui.pullToRefresh.material.js"></script>
+	<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 	<script type="text/javascript">
 		var markDate = ''; //记录日期
 		var today = ''; //记录今天日期
@@ -172,6 +205,10 @@
 		var pullRefresh; //下拉，上拉控件
 		var userId = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 		var page; //记录页数
+		var notes = {
+			noteKey: [], //记录笔记的Key
+			noteValue: {} //记录笔记的Value
+		}; //记录所有的笔记
 
 		mui.init({
 			gestureConfig: {
@@ -180,7 +217,6 @@
 		});
 
 		initListener();
-
 		mui.plusReady(function() {
 			var wd = events.showWaiting();
 			initData();
@@ -260,6 +296,11 @@
 					}
 				}
 			});
+			//初始播放器
+			var video = document.getElementById("video");
+			video.style.width = plus.screen.resolutionWidth + 'px';
+			video.style.height = parseInt(plus.screen.resolutionWidth * 3 / 4) + 'px';
+			video.style.marginTop = (plus.screen.resolutionHeight - 45 - plus.navigator.getStatusbarHeight() - parseInt(plus.screen.resolutionWidth * 3 / 4)) / 2 + 'px';
 		}
 
 		/**
@@ -293,6 +334,27 @@
 			mui('#list').on('tap', '.record-picture-num', function() {
 				previewImage.open(document.getElementById("img_" + this.getAttribute('data-id')));
 			});
+
+			mui('#list').on('tap', '.video-play', function() {
+				var ids = this.id.split('_');
+				var info = notes.noteValue[ids[2]];
+				if(plus.os.name == 'Android') {
+					playutil.openFileAndroid(info.EncAddr, function(text) {
+						mui.toast(text);
+					});
+				} else if(plus.os.name == 'iOS') {
+					var video = document.getElementById("video");
+					video.src = info.EncAddr;
+					video.poster = info.EncImgAddr;
+					mui('#videoPopover').popover('show');
+					var mask = mui.createMask(function() {
+						video.pause();
+						mui('#videoPopover').popover('hide');
+					});
+					mask.show();
+					video.play();
+				}
+			});
 		}
 
 		//请求数据
@@ -319,6 +381,10 @@
 						document.getElementById('list').innerHTML = '';
 						year = ''; //清空年份
 						markDate = ''; //日期
+						notes = {
+							noteKey: [], //记录笔记的Key
+							noteValue: {} //记录笔记的Value
+						}
 						pullRefresh.refresh(true); //更新当前控件
 					}
 					//console.log(document.getElementById("list").innerHTML);
@@ -347,7 +413,8 @@
 		 */
 		function createNotes(data) {
 			//console.log('createNotes ' + JSON.stringify(data));
-
+			notes.noteKey.push(data.TabId);
+			notes.noteValue[data.TabId] = data;
 			var date = data.PublishDate.split(' '); //发布的日期和时间
 			var dateItem = date[0]; //日期
 			var time = date[0].split('-'); //时间
@@ -410,6 +477,13 @@
 								</div>';
 				}
 				html_media = html_0 + html_1 + '</div>';
+			} else if(data.EncType == 2) { //视频
+				var play_width = parseInt(document.getElementById(dateItem).offsetWidth * 0.14);
+				var html_0 = '<div class="record-video">\
+								<img id="video_play_' + data.TabId + '" style="width:' + play_width + 'px;height:' + play_width + 'px;" class="video-play" src="../../image/utils/playvideo.png" />\
+								<img id="video_thumb_' + data.TabId + '" class="video-thumb" src="' + data.EncImgAddr + '" onload="videoThumbLoad(this);" onerror="videoThumbError(this);">\
+							</div>';
+				html_media = html_0;
 			}
 
 			var element = document.createElement('div');
@@ -468,6 +542,44 @@
 			} else {
 				pullRefresh.endPullUpToRefresh();
 			}
+		}
+
+		/**
+		 * 视频的缩略图加载成功
+		 * @param {Object} img
+		 */
+		function videoThumbLoad(img) {
+			var ids = img.id.split('_');
+			var id = ids[2];
+			var height = img.offsetHeight;
+			var width = img.offsetWidth;
+			if(width > height) {
+				img.style.width = '100%';
+				img.style.height = 'initial';
+				height = img.offsetHeight;
+				width = img.offsetWidth;
+			}
+			img.parentNode.style.height = height + 'px';
+			var play = document.getElementById("video_play_" + id);
+			var play_width = play.style.width.replace('px', '');
+			play.style.marginLeft = (width * 1 - play_width * 1) / 2 + 'px';
+			play.style.marginTop = (height * 1 - play_width * 1) / 2 + 'px';
+			img.style.visibility = 'visible';
+			play.style.visibility = 'visible';
+		}
+
+		/**
+		 * 视频的缩略图加载失败
+		 * @param {Object} img
+		 */
+		function videoThumbError(img) {
+			var ids = img.id.split('_');
+			var id = ids[2];
+			var play = document.getElementById("video_play_" + id);
+			var play_width = play.style.width.replace('px', '');
+			img.style.visibility = 'visible';
+			play.style.visibility = 'visible';
+			img.parentNode.style.height = play_width + 'px';
 		}
 	</script>
 
