--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -48,7 +48,7 @@
 				<p id="input_num">&nbsp;</p>
 				<!--<input id="input" type="text">-->
 				<textarea id="input" type="text" rows="1" class="text-area"></textarea>
-				<div class="text-area" style="font-size: 17px;visibility:;font-family: 'Helvetica Neue', Helvetica, sans-serif;">
+				<div class="text-area" style="font-size: 17px;visibility:hidden;font-family: 'Helvetica Neue', Helvetica, sans-serif;">
 					<div id="text_div">十</div>
 				</div>
 			</div>
