--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -20,43 +20,44 @@
 			.mui-content {
 				background-color: #f2f3f5;
 			}
-
+			
 			#topPopover {
 				position: fixed;
 				top: 10px;
 				right: 6px;
 				width: 150px;
 			}
-
+			
 			#topPopover .mui-popover-arrow {
 				left: auto;
 				right: 6px;
 				top: -25px;
 			}
-
+			
 			.mui-popover {
 				height: 80px;
 				width: 150;
 			}
+			
 			.mui-backdrop {
 				/*选择排序的遮罩*/
 				background-color: rgba(0, 0, 0, .05);
 			}
-
+			
 			#refreshContainer .mui-table-view:before,
 			#refreshContainer .mui-table-view:after,
 			#refreshContainer .mui-table-view-cell:after {
 				height: 0px;
 			}
-
+			
 			#refreshContainer .mui-table-view {
 				background-color: white;
 			}
-
+			
 			.cloud-item {
 				background-color: white;
 			}
-
+			
 			.cloud-item-left {
 				width: 16%;
 				border-right: 1px solid #D9D9D9;
@@ -65,7 +66,7 @@
 				font-weight: bold;
 				font-size: 1.6rem;
 			}
-
+			
 			.cloud-item-right {
 				/*margin-left: 16%;*/
 				width: 84%;
@@ -83,27 +84,27 @@
 			/*每一项的第二行*/
 			/*background-color: blue;*/
 			/*}*/
-
+			
 			.mui-plus-pullrefresh .mui-scroll {
 				position: absolute;
 				/*width: 100%;*/
 			}
-
+			
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: black;
 				border: none;
 			}
-
+			
 			#refreshContainer .mui-table-view-cell {
 				display: inline-block;
 				width: auto;
 				padding: 1px 1px;
 			}
-
+			
 			.mui-slider-indicator .mui-table-view-cell.mui-active {
 				background: white;
 			}
-
+			
 			.cloud-red-point {
 				position: absolute;
 				background: red;
@@ -112,27 +113,27 @@
 				border-radius: 50%;
 				display: none;
 			}
-
+			
 			img {
 				border-radius: 50%;
 			}
-
+			
 			#cloudstorage_1 img {
 				border-radius: 0px;
 			}
-
+			
 			.icon-jiaxiabiao {
 				color: #0ABAF5;
 			}
-
+			
 			.icon-banxiabiao {
 				color: #FFBA00;
 			}
-
+			
 			.icon-re {
 				color: #FD681E;
 			}
-
+			
 			.icon-re,
 			.icon-banxiabiao,
 			.icon-jiaxiabiao {
@@ -140,7 +141,7 @@
 				border: none !important;
 				top: 0px;
 			}
-
+			
 			.mui-popup-input input {
 				/*popup 输入框*/
 				height: 34px;
@@ -366,7 +367,7 @@
 
 				//				events.preload("../homework/homework-tea.html", 300);
 				events.preload('storage_main.html', 300); //预加载云存储
-
+				//设置与我相关未读数
 				window.addEventListener("NoReadCnt", function(e) {
 					var NoReadCnt = e.detail.data;
 					var noRead = document.getElementById('aboutme_noRead');
@@ -378,22 +379,27 @@
 						noRead.innerHTML = NoReadCnt;
 					}
 				})
+				//监听popover的显示和隐藏
 				window.addEventListener("topPopover", function(e) {
 					var flag = e.detail.data.flag;
-					console.log('flag='+JSON.stringify(flag))
-					if(flag==0){
+					console.log('flag=' + JSON.stringify(flag))
+					if(flag == 0) {
 						mui('#topPopover').popover('toggle')
-					}else{
+					} else {
 						mui('#topPopover').popover('hide')
 					}
-					
+
 				});
+				//点击popover里cell
 				mui('.mui-popover').on('tap', 'li', function(e) {
 					mui('#topPopover').popover('toggle')
 					if(this.id == 'pubDynamic') {
 						events.openNewWindowWithData('../quan/pub-dynamic.html', 'jxq');
 					} else if(this.id == 'aboutme') {
 						events.openNewWindow('../quan/aboutme.html')
+						var noRead = document.getElementById('aboutme_noRead');
+						noRead.innerHTML = 0;
+						noRead.style.visibility = 'hidden';
 					} else {
 						events.openNewWindowWithData('../mine/ReadQRCode.html', '');
 					}
@@ -640,8 +646,8 @@
 									},
 									className: datasource[index].gname
 								},
-								waiting:{
-									title:"加载中..."
+								waiting: {
+									title: "加载中..."
 								}
 							});
 						} else {
@@ -703,7 +709,7 @@
 				 * 修改云盘的文件，档案数据
 				 */
 				function changeData() {
-					if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)){
+					if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)) {
 						return;
 					}
 					//26.用户云盘顶层文件及文件夹获取
