调整安卓视频的播放方式

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -115,7 +115,7 @@
 				 */
 				multiMedia.videoPlayCallBack = function(data) {
 					if(plus.os.name == 'Android') {
-						playutil.openFile(data.path, function(text) {
+						playutil.openFileAndroid(data.path, function(text) {
 							mui.toast(text);
 						});
 					} else if(plus.os.name == 'iOS') {
