--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -283,6 +283,7 @@
 				},
 				up: {
 					contentinit: '', //默认没有更多显示空白
+					contentnomore: '', //隐藏没有更多提示
 					callback: function() {
 						console.log('up ' + JSON.stringify(page));
 						if(page) {
@@ -391,9 +392,7 @@
 					if(data.RspData.Data.length == 0 && pageIndex == 1) {
 						//第一页的数据为空
 						notesNone(); //显示无笔记界面
-						pullRefresh.options.up.contentnomore = ''; //隐藏提示
 					} else {
-						pullRefresh.options.up.contentnomore = '没有更多数据了';
 						for(var i = 0; i < data.RspData.Data.length; i++) {
 							createNotes(data.RspData.Data[i]);
 						}
@@ -575,6 +574,18 @@
 		function videoThumbError(img) {
 			var ids = img.id.split('_');
 			var id = ids[2];
+			var info = notes.noteValue[ids[2]];
+			var video = document.createElement("video");
+			video.src = info.EncAddr;
+			video.onloadeddata = function() {
+				var canvas = document.createElement('canvas');
+				canvas.width = video.videoWidth / 2;
+				canvas.height = video.videoHeight / 2;
+				canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+				var thumb = canvas.toDataURL("image/png");
+				img.src = thumb;
+				img.parentNode.style.minHeight = play_width + 'px';
+			}
 			var play = document.getElementById("video_play_" + id);
 			var play_width = play.style.width.replace('px', '');
 			img.style.visibility = 'visible';
