--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -110,6 +110,31 @@
 				float: left;
 				text-align: center;
 			}
+
+			.mui-popover {
+				width: 100%;
+				height: 0px;
+				border-radius: initial;
+				background-color: transparent;
+				border: none;
+				box-shadow: none;
+			}
+
+			.mui-backdrop {
+				background-color: black;
+			}
+
+			.video-thumb {
+				/*视频缩略图*/
+				width: 50%;
+				visibility: hidden;
+			}
+
+			.video-play {
+				/*播放按钮*/
+				position: absolute;
+				visibility: hidden;
+			}
 		</style>
 	</head>
 
@@ -164,6 +189,11 @@
 				</ul>
 			</div>
 		</div>
+		<div id="videoPopover" class="mui-popover">
+			<video id="video" style="position: absolute;z-index: 999;">
+				您的浏览器不支持 video 标签。
+			</video>
+		</div>
 
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
@@ -179,6 +209,8 @@
 		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
 		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
+		<script type="text/javascript" src="../../js/utils/recordvideoutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 		<script type="text/javascript">
 			var main; //获取当前窗体对象
 			var mainData; //接收页面传入的参数值
@@ -192,6 +224,10 @@
 			var uploadNum = 0; //记录上传的次数
 			var hideOption; //隐藏键盘的数据
 			var page; //记录页数
+			var records = {
+				recordKey: [], //记录笔记的Key
+				recordValue: {} //记录笔记的Value
+			}; //记录所有的笔记
 			var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 			var multiMedia; //多媒体选取控件
 			var previewImage; //查看图片的控件
@@ -209,7 +245,6 @@
 				initData(); //初始化数据
 				init(); //初始化界面
 				initListener(); //初始化监听
-
 				getNotes(1, wd); //获取数据
 			});
 
@@ -253,6 +288,27 @@
 					//console.log(document.getElementById("MultiMedia_Picture_Footer").innerHTML);
 				}
 
+				/**
+				 * 视频数量变化的回调
+				 */
+				multiMedia.videoChangeCallBack = function() {
+					changeCommit();
+					//console.log(document.getElementById("MultiMedia_Picture_Footer").innerHTML);
+				}
+
+				/**
+				 * 播放视频
+				 * @param {Object} data
+				 */
+				multiMedia.videoPlayCallBack = function(data) {
+					showVideo(data);
+				}
+				//初始播放器
+				var video = document.getElementById("video");
+				video.style.width = plus.screen.resolutionWidth + 'px';
+				video.style.height = parseInt(plus.screen.resolutionWidth * 3 / 4) + 'px';
+				video.style.marginTop = (plus.screen.resolutionHeight - 45 - plus.navigator.getStatusbarHeight() - parseInt(plus.screen.resolutionWidth * 3 / 4)) / 2 + 'px';
+
 				//初始化下拉，上拉控件
 				var deceleration = mui.os.ios ? 0.003 : 0.0009;
 				mui('.mui-scroll-wrapper').scroll({
@@ -273,6 +329,7 @@
 					},
 					up: {
 						contentinit: '', //默认没有更多显示空白
+						contentnomore: '', //隐藏没有更多提示
 						callback: function() {
 							console.log('up ' + JSON.stringify(page));
 							if(page) {
@@ -306,7 +363,7 @@
 						call_type = value;
 						document.getElementById("input_call").style.color = 'black';
 					} else {
-						console.log('checkBoxBefore:' + call_type); //上次选择的类型
+						//console.log('checkBoxBefore:' + call_type); //上次选择的类型
 						console.log('checkBox:' + value); //本次选择的类型
 						var checkBox = document.getElementById("cb_" + value);
 						var checkBoxBefore = document.getElementById("cb_" + call_type);
@@ -321,7 +378,7 @@
 							document.getElementById("input_call").style.color = 'black';
 						}
 					}
-					console.log('call_type:' + call_type);
+					//console.log('call_type:' + call_type);
 					changeCommit();
 				});
 
@@ -380,7 +437,7 @@
 										encAddr: '', //附件地址
 										encImg: '', //附件缩略图地址
 									}, wd, function() {
-										if(multiMedia.data.PictureArray.length != 0) { //有文件
+										if(multiMedia.data.PictureArray.length != 0 || multiMedia.data.VideoArray.length != 0) { //有文件
 											uploadFile(wd, strParent, strUser); //上传文件
 										} else if(document.getElementById("textarea_record").value.replace(/(^\s*)|(\s*$)/g, "") != "") { //没有文件只有文字
 											addNotes(2, strParent, strUser, {
@@ -396,7 +453,7 @@
 									});
 								} else { //没有点到
 									//增加记事
-									if(multiMedia.data.PictureArray.length != 0) {
+									if(multiMedia.data.PictureArray.length != 0 || multiMedia.data.VideoArray.length != 0) {
 										uploadFile(wd, strParent, strUser); //上传文件
 									} else if(document.getElementById("textarea_record").value.replace(/(^\s*)|(\s*$)/g, "") != "") {
 										addNotes(2, strParent, strUser, {
@@ -422,6 +479,18 @@
 					scrollTop.scrollTo(0, 0, 100);
 				});
 
+				/**
+				 * 播放视频
+				 */
+				mui('#top').on('tap', '.video-play', function() {
+					var ids = this.id.split('_');
+					var info = records.recordValue[ids[2]];
+					showVideo({
+						path: info.EncAddr,
+						localthumb: info.EncImgAddr
+					});
+				});
+
 				//有的手机加载慢，设置监听后才允许点击
 				var ids = ['cb_2', 'cb_3', 'cb_4', 'cb_5', 'input_call', 'textarea_record'];
 				for(var i = 0; i < ids.length; i++) {
@@ -434,7 +503,7 @@
 			 */
 			function changeCommit() {
 				var textarea_record = document.getElementById("textarea_record");
-				if(call_type == '' && textarea_record.value.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0) {
+				if(call_type == '' && textarea_record.value.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0) {
 					//不允许发布
 					document.getElementById("commit").style.color = "gray";
 					commit = false;
@@ -508,7 +577,13 @@
 							mui.toast('记事发布成功');
 							//重置数据
 							pathList = [];
-							multiMedia.imageRefresh();
+							if(multiMedia.data.PictureArray.length != 0) { //图片
+								multiMedia.imageRefresh();
+							}
+							if(multiMedia.data.VideoArray.length != 0) { //视频
+								multiMedia.videoRefresh();
+							}
+
 							document.getElementById("textarea_record").value = '';
 						}
 						callback();
@@ -548,6 +623,8 @@
 			 */
 			function createNotes(data) {
 				//console.log('createNotes:' + JSON.stringify(data));
+				records.recordKey.push(data.TabId);
+				records.recordValue[data.TabId] = data;
 				var li = document.createElement('li');
 				li.className = 'mui-table-view-cell';
 				var type = ''; //类型
@@ -586,6 +663,13 @@
 								</div>';
 					}
 					mediaStr = html_0 + html_1 + '</div>';
+				} else if(data.EncType == 2) { //视频
+					var play_width = parseInt((document.getElementById("top").offsetWidth - 30) * 0.14);
+					var html_0 = '<div class="record-video">\
+								<img id="video_play_' + data.TabId + '" style="width:' + play_width + 'px;height:' + play_width + 'px;" class="video-play" src="../../image/utils/playvideo.png" />\
+								<img id="video_thumb_' + data.TabId + '" class="video-thumb" src="' + data.EncImgAddr + '" onload="videoThumbLoad(this);" onerror="videoThumbError(this);">\
+							</div>';
+					mediaStr = html_0;
 				}
 				li.innerHTML = '<div class="time">' + data.PublishDate + '</div>\
 								<div id="MsgContent_' + data.TabId + '" class="mui-media-body"></div>' + mediaStr;
@@ -618,6 +702,10 @@
 						};
 						console.log('page ' + JSON.stringify(page));
 						if(pageIndex == 1) { //下拉刷新或者获取的第一页的内容
+							records = {
+								recordKey: [], //记录笔记的Key
+								recordValue: {} //记录笔记的Value
+							}; //记录所有的笔记
 							//清空对应的界面
 							document.getElementById('top').innerHTML = '';
 							pullRefresh.refresh(true); //更新当前控件
@@ -643,20 +731,28 @@
 			 * 上传文件
 			 */
 			function uploadFile(waiting, strParent, strUser) {
-				var pathArray = []
-				for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
-					pathArray.push(multiMedia.data.PictureArray[i].path);
-				}
-
 				var getToken = {
 					type: '2', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件；2上传需要生成缩略图的多个文件
 					appId: 6, //int 必填 项目id
-					fileArray: pathArray, //array 选填  type为2时有效，多个文件的路径
+					fileArray: [], //array 选填  type为2时有效，多个文件的路径
 					mainSpace: window.storageKeyName.QNPUBSPACE, //str 必填 文件存放在私有空间或公有空间
 					uploadSpace: window.storageKeyName.RECORD, //str 必填  上传的空间
 				}
 
-				uploadNum = pathArray.length; //记录上传的次数
+				var fileArray = []
+
+				if(multiMedia.data.PictureArray.length !== 0) { //图片
+					for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
+						fileArray.push(multiMedia.data.PictureArray[i].path);
+					}
+				} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+					getToken.type = '3';
+					for(var i = 0; i < multiMedia.data.VideoArray.length; i++) {
+						fileArray.push(multiMedia.data.VideoArray[i]);
+					}
+				}
+				getToken.fileArray = fileArray;
+				uploadNum = fileArray.length; //记录上传的次数
 
 				CloudFileUtil.getQNUpToken(window.storageKeyName.QNGETUPTOKENFILE, getToken, function(data) {
 					console.log('获取上传凭证 ' + JSON.stringify(data));
@@ -666,16 +762,33 @@
 						var configure = data.configure; //获取token的配置信息
 						console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
 						console.log('七牛配置信息:' + JSON.stringify(configure));
-						//记录图片和缩略图地址
-						for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
-							for(var i = 0; i < QNUptoken.Data.length; i++) {
-								//console.log(JSON.stringify(QNUptoken.Data[i]));
-								var filePath = QNUptoken.Data[i].P_Key.split("/");
-								var fileName = filePath[filePath.length - 1];
-								var fileId = fileName.split("_")[0];
-								if(multiMedia.data.PictureArray[j].id == fileId) {
-									multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
-									multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+						if(multiMedia.data.PictureArray.length !== 0) { //图片
+							//记录图片和缩略图地址
+							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									var fileId = fileName.split("_")[0];
+									if(multiMedia.data.PictureArray[j].id == fileId) {
+										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+									}
+								}
+							}
+						} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+							//记录视频和缩略图地址
+							for(var j = 0; j < multiMedia.data.VideoArray.length; j++) {
+								var videoPath = multiMedia.data.VideoArray[j].path.split("/");
+								var videoName = videoPath[videoPath.length - 1];
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									if(videoName == fileName) {
+										multiMedia.data.VideoArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.VideoArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+									}
 								}
 							}
 						}
@@ -737,13 +850,25 @@
 						//获取路径
 						var fPath = '';
 						var num; //记录第几张图片
-						for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
-							var path = multiMedia.data.PictureArray[k].path.split("/");
-							var name = path[path.length - 1];
-							if(fileName == name) {
-								num = k;
-								fPath = multiMedia.data.PictureArray[k].path;
-								break;
+						if(multiMedia.data.PictureArray.length !== 0) { //图片
+							for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
+								var path = multiMedia.data.PictureArray[k].path.split("/");
+								var name = path[path.length - 1];
+								if(fileName == name) {
+									num = k;
+									fPath = multiMedia.data.PictureArray[k].path;
+									break;
+								}
+							}
+						} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+							for(var k = 0; k < multiMedia.data.VideoArray.length; k++) {
+								var path = multiMedia.data.VideoArray[k].path.split("/");
+								var name = path[path.length - 1];
+								if(fileName == name) {
+									num = k;
+									fPath = multiMedia.data.VideoArray[k].path;
+									break;
+								}
 							}
 						}
 						CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
@@ -756,20 +881,37 @@
 								var title = '上传 ' + (QNUptoken.Data.length - uploadNum) + "/" + (QNUptoken.Data.length);
 								waiting.setTitle(title);
 								//记录失败后需要删除的文件
-								pathList.push(multiMedia.data.PictureArray[num].domain);
-								pathList.push(multiMedia.data.PictureArray[num].thumb);
+								if(multiMedia.data.PictureArray.length !== 0) { //图片
+									pathList.push(multiMedia.data.PictureArray[num].domain);
+									pathList.push(multiMedia.data.PictureArray[num].thumb);
+								} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+									pathList.push(multiMedia.data.VideoArray[num].domain);
+									pathList.push(multiMedia.data.VideoArray[num].thumb);
+								}
+
 								if(uploadNum == 0) {
 									console.log('所有上传都成功');
 									var encAddr = []; //附件地址
 									var encImg = []; //附件缩略图地址
-									for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
-										encAddr.push(multiMedia.data.PictureArray[j].domain);
-										encImg.push(multiMedia.data.PictureArray[j].thumb);
+									var type;
+									if(multiMedia.data.PictureArray.length !== 0) { //图片
+										for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+											encAddr.push(multiMedia.data.PictureArray[j].domain);
+											encImg.push(multiMedia.data.PictureArray[j].thumb);
+										}
+										type = '1';
+									} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+										for(var j = 0; j < multiMedia.data.VideoArray.length; j++) {
+											encAddr.push(multiMedia.data.VideoArray[j].domain);
+											encImg.push(multiMedia.data.VideoArray[j].thumb);
+										}
+										type = '2';
 									}
 									var encAddrStr = encAddr.join('|');
 									var encImgrStr = encImg.join('|');
+
 									addNotes(2, strParent, strUser, {
-										encType: '1', //附件类型,1图片2音视频3仅文字
+										encType: type, //附件类型,1图片2音视频3仅文字
 										encAddr: encAddrStr, //附件地址
 										encImg: encImgrStr, //附件缩略图地址
 									}, waiting, function() {
@@ -834,6 +976,78 @@
 					pullRefresh.endPullUpToRefresh(true);
 				} else {
 					pullRefresh.endPullUpToRefresh();
+				}
+			}
+
+			/**
+			 * 视频的缩略图加载成功
+			 * @param {Object} img
+			 */
+			function videoThumbLoad(img) {
+				var ids = img.id.split('_');
+				var id = ids[2];
+				var height = img.offsetHeight;
+				var width = img.offsetWidth;
+				if(width > height) {
+					img.style.width = '100%';
+					img.style.height = 'initial';
+					height = img.offsetHeight;
+					width = img.offsetWidth;
+				}
+				var play = document.getElementById("video_play_" + id);
+				var play_width = play.style.width.replace('px', '');
+				play.style.marginLeft = (width * 1 - play_width * 1) / 2 + 'px';
+				play.style.marginTop = (height * 1 - play_width * 1) / 2 + 'px';
+				//img.parentNode.style.height = height + 'px';
+				img.style.visibility = 'visible';
+				play.style.visibility = 'visible';
+			}
+
+			/**
+			 * 视频的缩略图加载失败
+			 * @param {Object} img
+			 */
+			function videoThumbError(img) {
+				var ids = img.id.split('_');
+				var id = ids[2];
+				var info = records.recordValue[ids[2]];
+				var video = document.createElement("video");
+				video.src = info.EncAddr;
+				video.onloadeddata = function() {
+					var canvas = document.createElement('canvas');
+					canvas.width = video.videoWidth / 2;
+					canvas.height = video.videoHeight / 2;
+					canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+					var thumb = canvas.toDataURL("image/png");
+					img.src = thumb;
+					img.parentNode.style.minHeight = play_width + 'px';
+				}
+				var play = document.getElementById("video_play_" + id);
+				var play_width = play.style.width.replace('px', '');
+				img.style.visibility = 'visible';
+				play.style.visibility = 'visible';
+			}
+
+			/**
+			 * 播放视频
+			 * @param {Object} data
+			 */
+			function showVideo(data) {
+				if(plus.os.name == 'Android') {
+					playutil.openFileAndroid(data.path, function(text) {
+						mui.toast(text);
+					});
+				} else if(plus.os.name == 'iOS') {
+					var video = document.getElementById("video");
+					video.src = data.path;
+					video.poster = data.localthumb;
+					mui('#videoPopover').popover('show');
+					var mask = mui.createMask(function() {
+						video.pause();
+						mui('#videoPopover').popover('hide');
+					});
+					mask.show();
+					video.play();
 				}
 			}
 		</script>
