--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -29,6 +29,19 @@
 				border: none;
 				border-bottom: 1px solid #D9D9D9;
 			}
+
+			.mui-popover {
+				width: 100%;
+				height: 0px;
+				border-radius: initial;
+				background-color: transparent;
+				border: none;
+				box-shadow: none;
+			}
+
+			.mui-backdrop {
+				background-color: black;
+			}
 		</style>
 	</head>
 
@@ -47,7 +60,11 @@
 				</div>
 			</ul>
 		</div>
-
+		<div id="videoPopover" class="mui-popover">
+			<video id="video" style="position: absolute;z-index: 999;">
+				您的浏览器不支持 video 标签。
+			</video>
+		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
@@ -60,7 +77,8 @@
 		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
 		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
-
+		<script type="text/javascript" src="../../js/utils/recordvideoutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			var mainData; //记录数据
@@ -113,7 +131,36 @@
 					TotalVideo: 1, //视频的个数
 				});
 
+				/**
+				 * 播放视频
+				 * @param {Object} data
+				 */
+				multiMedia.videoPlayCallBack = function(data) {
+					if(plus.os.name == 'Android') {
+						playutil.openFileAndroid(data.path, function(text) {
+							mui.toast(text);
+						});
+					} else if(plus.os.name == 'iOS') {
+						var video = document.getElementById("video");
+						video.src = data.path;
+						video.poster = data.localthumb;
+						mui('#videoPopover').popover('show');
+						var mask = mui.createMask(function() {
+							video.pause();
+							mui('#videoPopover').popover('hide');
+						});
+						mask.show();
+						video.play();
+					}
+				}
 				hideOption = events.initHideKeyBoard(); //获取配置信息
+
+				//初始化播放器
+				var video = document.getElementById("video");
+				video.style.width = plus.screen.resolutionWidth + 'px';
+				video.style.height = parseInt(plus.screen.resolutionWidth * 3 / 4) + 'px';
+				video.style.marginTop = (plus.screen.resolutionHeight - 45 - plus.navigator.getStatusbarHeight() - parseInt(plus.screen.resolutionWidth * 3 / 4)) / 2 + 'px';
+
 			}
 
 			/*
@@ -129,14 +176,14 @@
 				document.getElementById('commit').addEventListener('tap', function() {
 					events.hideKeyBoard(hideOption);
 					var msgContent = textArea.value;
-					if(msgContent.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0) {
+					if(msgContent.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0) {
 						mui.toast('记事不能为空');
 					} else if(msgContent.length > 500) {
 						mui.toast('记事最多500字');
 					} else {
 						var wd = events.showWaiting();
 						document.getElementById("commit").disabled = true;
-						if(multiMedia.data.PictureArray.length == 0) { //没有传附件
+						if(multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0) { //没有传附件
 							addRecorcd(wd, '3', '', '');
 						} else {
 							uploadFile(wd);
@@ -204,40 +251,61 @@
 			 * 上传文件
 			 */
 			function uploadFile(wd) {
-				var pathArray = []
-				for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
-					pathArray.push(multiMedia.data.PictureArray[i].path);
-				}
-				var getUpTokenUrl = window.storageKeyName.QNGETUPTOKENFILE; //获取token路径
-				var mainSpace = window.storageKeyName.QNPUBSPACE; //公开空间
-				var uploadSpace = window.storageKeyName.RECORD; //记事空间
 				var getToken = {
 					type: '2', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件；2上传需要生成缩略图的多个文件
 					appId: 6, //int 必填 项目id
-					fileArray: pathArray, //array 选填  type为2时有效，多个文件的路径
-					mainSpace: mainSpace, //str 必填 文件存放在私有空间或公有空间
-					uploadSpace: uploadSpace, //str 必填  上传的空间
+					fileArray: [], //array 选填  type为2时有效，多个文件的路径
+					mainSpace: window.storageKeyName.QNPUBSPACE, //str 必填 文件存放在私有空间或公有空间
+					uploadSpace: window.storageKeyName.NOTE, //str 必填  上传的空间
 				}
+				var fileArray = [];
+				if(multiMedia.data.PictureArray.length !== 0) { //图片
+					for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
+						fileArray.push(multiMedia.data.PictureArray[i].path);
+					}
+				} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+					getToken.type = '3';
+					for(var i = 0; i < multiMedia.data.VideoArray.length; i++) {
+						fileArray.push(multiMedia.data.VideoArray[i]);
+					}
+				}
+				getToken.fileArray = fileArray;
+				uploadNum = fileArray.length; //记录上传的次数
 
-				uploadNum = pathArray.length; //记录上传的次数
-
-				CloudFileUtil.getQNUpToken(getUpTokenUrl, getToken, function(data) {
+				CloudFileUtil.getQNUpToken(window.storageKeyName.QNGETUPTOKENFILE, getToken, function(data) {
 					console.log('获取上传凭证 ' + JSON.stringify(data));
 					if(data.data.Status == 1) {
 						QNUptoken = data.data; //token数据
 						var configure = data.configure; //获取token的配置信息
 						console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
 						console.log('七牛配置信息:' + JSON.stringify(configure));
-						//记录图片和缩略图地址
-						for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
-							for(var i = 0; i < QNUptoken.Data.length; i++) {
-								//console.log(JSON.stringify(QNUptoken.Data[i]));
-								var filePath = QNUptoken.Data[i].P_Key.split("/");
-								var fileName = filePath[filePath.length - 1];
-								var fileId = fileName.split("_")[0];
-								if(multiMedia.data.PictureArray[j].id == fileId) {
-									multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
-									multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+						if(multiMedia.data.PictureArray.length !== 0) { //图片
+							//记录图片和缩略图地址
+							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									var fileId = fileName.split("_")[0];
+									if(multiMedia.data.PictureArray[j].id == fileId) {
+										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+									}
+								}
+							}
+						} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+							//记录视频和缩略图地址
+							for(var j = 0; j < multiMedia.data.VideoArray.length; j++) {
+								var videoPath = multiMedia.data.VideoArray[j].path.split("/");
+								var videoName = videoPath[videoPath.length - 1];
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									if(videoName == fileName) {
+										multiMedia.data.VideoArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.VideoArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+									}
 								}
 							}
 						}
@@ -296,14 +364,26 @@
 						var fileName = filePath[filePath.length - 1];
 						//获取路径
 						var fPath = '';
-						var num; //记录第几张图片
-						for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
-							var path = multiMedia.data.PictureArray[k].path.split("/");
-							var name = path[path.length - 1];
-							if(fileName == name) {
-								num = k;
-								fPath = multiMedia.data.PictureArray[k].path;
-								break;
+						var num; //记录第几个文件
+						if(multiMedia.data.PictureArray.length !== 0) { //图片
+							for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
+								var path = multiMedia.data.PictureArray[k].path.split("/");
+								var name = path[path.length - 1];
+								if(fileName == name) {
+									num = k;
+									fPath = multiMedia.data.PictureArray[k].path;
+									break;
+								}
+							}
+						} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+							for(var k = 0; k < multiMedia.data.VideoArray.length; k++) {
+								var path = multiMedia.data.VideoArray[k].path.split("/");
+								var name = path[path.length - 1];
+								if(fileName == name) {
+									num = k;
+									fPath = multiMedia.data.VideoArray[k].path;
+									break;
+								}
 							}
 						}
 						CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
@@ -316,19 +396,34 @@
 								var title = '上传 ' + (QNUptoken.Data.length - uploadNum) + "/" + (QNUptoken.Data.length);
 								wd.setTitle(title);
 								//记录失败后需要删除的文件
-								pathList.push(multiMedia.data.PictureArray[num].domain);
-								pathList.push(multiMedia.data.PictureArray[num].thumb);
+								if(multiMedia.data.PictureArray.length !== 0) { //图片
+									pathList.push(multiMedia.data.PictureArray[num].domain);
+									pathList.push(multiMedia.data.PictureArray[num].thumb);
+								} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+									pathList.push(multiMedia.data.VideoArray[num].domain);
+									pathList.push(multiMedia.data.VideoArray[num].thumb);
+								}
 								if(uploadNum == 0) {
 									console.log('所有上传都成功');
 									var encAddr = []; //附件地址
 									var encImg = []; //附件缩略图地址
-									for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
-										encAddr.push(multiMedia.data.PictureArray[j].domain);
-										encImg.push(multiMedia.data.PictureArray[j].thumb);
+									var type;
+									if(multiMedia.data.PictureArray.length !== 0) { //图片
+										for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+											encAddr.push(multiMedia.data.PictureArray[j].domain);
+											encImg.push(multiMedia.data.PictureArray[j].thumb);
+										}
+										type = '1';
+									} else if(multiMedia.data.VideoArray.length !== 0) { //视频
+										for(var j = 0; j < multiMedia.data.VideoArray.length; j++) {
+											encAddr.push(multiMedia.data.VideoArray[j].domain);
+											encImg.push(multiMedia.data.VideoArray[j].thumb);
+										}
+										type = '2';
 									}
 									var encAddrStr = encAddr.join('|');
 									var encImgrStr = encImg.join('|');
-									addRecorcd(wd, '1', encAddrStr, encImgrStr);
+									addRecorcd(wd, type, encAddrStr, encImgrStr);
 								} else {
 									taskCreate(wd);
 								}
